slide rdd notebook rdd added

--- a/core/notebooks/notebook03_pandas.qmd
+++ b/core/notebooks/notebook03_pandas.qmd
@@ -372,7 +372,8 @@ else:
 ```{python}
 #| eval: false
 #| scrolled: true
-df = pd.read_csv("tips.csv", 
+df = pd.read_csv(
+    "tips.csv", 
     delimiter=","
 )
 ```
